--- a/assets/dark.css
+++ b/assets/dark.css
@@ -613,7 +613,7 @@ pre {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: none; /* Resmi container'a sığacak şekilde kırp */
+  object-fit: cover; /* Resmi container'a sığacak şekilde kırp */
   transition: opacity 1s ease;
   opacity: 0; /* Resim yüklenene kadar görünmez yap */
 }
