--- a/assets/dark.css
+++ b/assets/dark.css
@@ -612,7 +612,7 @@ pre {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover; /* Resmi container'a sığacak şekilde kırp */
   transition: opacity 1s ease;
   opacity: 0; /* Resim yüklenene kadar görünmez yap */
