--- a/assets/dark.css
+++ b/assets/dark.css
@@ -595,44 +595,23 @@ pre {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Kolonları otomatik olarak ayarla */
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 10px; /* Resimler arasındaki boşluk */
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  grid-auto-flow: dense;
+  gap: 6px;
 }
 
-.image-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%; /* Kare resimler için yükseklik ayarı */
-  overflow: hidden;
-}
-
-.image-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
+img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Resmi container'a sığacak şekilde kırp */
-  transition: opacity 1s ease;
-  opacity: 0; /* Resim yüklenene kadar görünmez yap */
+  object-fit: cover;
 }
 
-.image-container .loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 40px;
-  height: 40px;
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
+img.four-grid-cells {
+  grid-row: span 2 / auto;
+  grid-column: span 2 / auto;
 }
 
-@keyframes spin {
-  0% { transform: translate(-50%, -50%) rotate(0deg); }
-  100% { transform: translate(-50%, -50%) rotate(360deg); }
+img.wide-image {
+  grid-column: span 2 / auto;
 }
