--- a/assets/dark.css
+++ b/assets/dark.css
@@ -593,25 +593,22 @@ pre {
 
 /* Literal.Number.Integer.Long */
 
+
 .gallery {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: auto;
-  grid-auto-flow: dense;
   gap: 6px;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
 }
 
 img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
 
 img.four-grid-cells {
-  grid-row: span 2 / auto;
-  grid-column: span 2 / auto;
-}
-
-img.wide-image {
-  grid-column: span 2 / auto;
+  -ms-grid-row-span: 2;
+  -ms-grid-column-span: 2;
 }
