--- a/assets/dark.css
+++ b/assets/dark.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700");
+
 :root {
   --base-color: #dbdbdb;
   --border: dashed 1px rgba(219, 219, 219, 0.9);
@@ -80,6 +81,7 @@ a:hover {
     font-size: 12px !important;
   }
 }
+
 /**
   * Layout
   */
@@ -134,16 +136,16 @@ footer {
 /**
   * Lists
   */
-:not(.menu) > ul {
+:not(.menu)>ul {
   list-style: none;
   padding-left: 0;
 }
 
-:not(.menu) > ul {
+:not(.menu)>ul {
   list-style-type: none;
 }
 
-:not(.menu) > ul > li:before {
+:not(.menu)>ul>li:before {
   content: "-";
   margin-right: 9px;
 }
@@ -594,15 +596,29 @@ pre {
 /* Literal.Number.Integer.Long */
 
 .gallery {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   gap: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
-img {
-  height: 100px;
-  width: 100px;
-  max-width: 100px;
-  max-height: 100px;
-  object-fit: cover;
+.gallery-item {
+  flex: 1 1 calc(33.333% - 10px);
+  box-sizing: border-box;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.3s ease;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.1);
 }
 
