--- a/assets/dark.css
+++ b/assets/dark.css
@@ -596,7 +596,11 @@ pre {
 /* Literal.Number.Integer.Long */
 
 .gallery {
-  display: flex;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
   flex-wrap: wrap;
   gap: 10px;
   max-width: 1000px;
@@ -604,6 +608,10 @@ pre {
 }
 
 .gallery-item {
+  -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 1;         /* OLD - Firefox 19- */
+  -webkit-flex: 1 1 calc(33.333% - 10px);  /* Chrome */
+  -ms-flex: 1 1 calc(33.333% - 10px);      /* IE 10 */
   flex: 1 1 calc(33.333% - 10px);
   box-sizing: border-box;
   overflow: hidden;
