--- a/assets/dark.css
+++ b/assets/dark.css
@@ -595,38 +595,7 @@ pre {
 
 /* Literal.Number.Integer.Long */
 
-.gallery {
-  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;      /* TWEENER - IE 10 */
-  display: -webkit-flex;     /* NEW - Chrome */
-  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
-  flex-wrap: wrap;
-  gap: 10px;
-  max-width: 1000px;
-  margin: auto;
+.image {
+  width: 100px;
+  height: 100px;
 }
-
-.gallery-item {
-  -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
-  -moz-box-flex: 1;         /* OLD - Firefox 19- */
-  -webkit-flex: 1 1 calc(33.333% - 10px);  /* Chrome */
-  -ms-flex: 1 1 calc(33.333% - 10px);      /* IE 10 */
-  flex: 1 1 calc(33.333% - 10px);
-  box-sizing: border-box;
-  overflow: hidden;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-
-.gallery-item img {
-  width: 100%;
-  height: auto;
-  display: block;
-  transition: transform 0.3s ease;
-}
-
-.gallery-item:hover img {
-  transform: scale(1.1);
-}
-
