--- a/assets/dark.css
+++ b/assets/dark.css
@@ -87,7 +87,7 @@ a:hover {
   */
 .container {
   width: 90%;
-  max-width: 600px;
+  /* max-width: 600px; */
   margin-right: auto;
   margin-left: auto;
 }
