--- a/assets/dark.css
+++ b/assets/dark.css
@@ -595,10 +595,45 @@ pre {
 
 /* Literal.Number.Integer.Long */
 
-.image {
-  width: 100px;
-  height: 100px;
-  max-width: 100px;
-  max-height: 100px;
-  object-fit: cover;
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Kolonları otomatik olarak ayarla */
+  gap: 10px; /* Resimler arasındaki boşluk */
+}
+
+.image-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* Kare resimler için yükseklik ayarı */
+  overflow: hidden;
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Resmi container'a sığacak şekilde kırp */
+  transition: opacity 1s ease;
+  opacity: 0; /* Resim yüklenene kadar görünmez yap */
+}
+
+.image-container .loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: translate(-50%, -50%) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
